started implementing the jarmodel for eca-cnp
Added io support for single layer jar scale model.
Also included is the skeletal code for driving the
jar model.

All tests passed on OSX with gcc8.

--- a/src/io_util/CMakeLists.txt
+++ b/src/io_util/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(BETR_IO_UTIL_SOURCES
   ncdio_pio.F90
+  histMod.F90
   )
 
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include_directories(${CMAKE_BINARY_DIR}/src/esmf_wrf_timemgr)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 
 include(add_betr_library)
 add_betr_library(betr_io_util ${BETR_IO_UTIL_SOURCES})
