add application cdom_ecanp
cdom_ecacnp is a modified version of CENT_ECACNP with
explicit DOM pools.

--- a/src/Applications/app_util/CMakeLists.txt
+++ b/src/Applications/app_util/CMakeLists.txt
@@ -11,6 +11,9 @@ include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/CENT_ECACNP/centPara)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/CENT_ECACNP/cent1layer)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/CENT_ECACNP/centNlayer)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom_ecacnp/cdomPara)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom_ecacnp/cdom1layer)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom_ecacnp/cdomNlayer)
 
 include(add_betr_library)
 add_betr_library(app_util ${BETR_APP_UTIL_SOURCES})
