--- a/src/Applications/soil-farm/bgcfarm_util/CMakeLists.txt
+++ b/src/Applications/soil-farm/bgcfarm_util/CMakeLists.txt
@@ -2,6 +2,7 @@ set(BGCFARM_UTIL_SOURCES
  BiogeoConType.F90
  JarBgcForcType.F90
  BeTRJarModel.F90
+ SOMStateVarUpdateMod.F90
 )
 
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
