add offline parameter reader for soilfarm
Now applications in the soil-farm can read parameters
from their own files. Also, a bug is fixed
for running betr-bgc with carbon-only mode.
All tests passed on OSX with gnu 8.x compilers.

--- a/src/jarmodel/test/CMakeLists.txt
+++ b/src/jarmodel/test/CMakeLists.txt
@@ -1,13 +1,16 @@
 set(JARMODEL_TEST_SOURCES
   iotest.F90
   timertest.F90
+  readparatest.F90
 )
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/io_util)
 include_directories(${CMAKE_BINARY_DIR}/src/jarmodel/forcing)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
-
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util/)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/CENT_ECACNP/centPara/)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom_ecacnp/cdomPara/)
 
 
 include(add_betr_library)
@@ -20,10 +23,11 @@ link_libraries(${BETR_LIBRARIES};${BETR_TPLS})
 include(add_betr_executable)
 add_betr_executable(iotest iotest.F90)
 add_betr_executable(timertest timertest.F90)
-
+add_betr_executable(readparatest readparatest.F90)
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLLED")
   install(TARGETS iotest DESTINATION bin)
   install(TARGETS timertest DESTINATION bin)
+  install(TARGETS readparatest DESTINATION bin)
   file(GLOB HEADS *.h)
   install(FILES ${HEADS} DESTINATION include/jarmodel/test)
 endif()
