--- a/src/betr/betr_math/CMakeLists.txt
+++ b/src/betr/betr_math/CMakeLists.txt
@@ -6,6 +6,7 @@ set(BETR_MATH_SOURCES
   ODEMod.F90
   BTridiagonalMod.F90
   KineticsMod.F90
+  LinearAlgebraMod.F90
   )
 
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
