directory reorganization for soil-farm
Now the directories of soil-farm are renamed
to prepare for the adoption of a case generator.
Also a bug is fixed for standalone ecacnp bgc.

--- a/src/Applications/soil-farm/CMakeLists.txt
+++ b/src/Applications/soil-farm/CMakeLists.txt
@@ -1,16 +1,8 @@
 add_subdirectory(bgcfarm_util)
-add_subdirectory(CENT_ECACNP)
-add_subdirectory(cdom_ecacnp)
-if (UGM)
-  add_subdirectory(UGM-M)
-endif()
-#add_subdirectory(CENT_ECADCNP)
+add_subdirectory(ecacnp)
+add_subdirectory(cdom)
+add_subdirectory(simic)
 # FIXME(bja, 201603) is this manual list necessary with the subdir
 # adding to parent scope?
 
-#set(BETR_LIBRARIES bgcfarm_util;cent_ecadcnp;${BETR_LIBRARIES} PARENT_SCOPE)
-if (UGM)
-set(BETR_LIBRARIES bgcfarm_util;UGM-M;${BETR_LIBRARIES} PARENT_SCOPE)
-else()
 set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
-endif()
