--- a/src/Applications/soil-farm/ecacnp/ecacnpPara/CMakeLists.txt
+++ b/src/Applications/soil-farm/ecacnp/ecacnpPara/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(CDOMPARA_SOURCES
- cdomParaType.F90
+set(CENTPARA_SOURCES
+ CentParaType.F90
 )
 
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
@@ -8,15 +8,15 @@ include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 include(add_betr_library)
-add_betr_library(cdomPara ${CDOMPARA_SOURCES})
+add_betr_library(ecacnpPara ${CENTPARA_SOURCES})
 
-set(BETR_LIBRARIES cdomPara;${BETR_LIBRARIES} PARENT_SCOPE)
-set(BETR_LIBRARIES cdomPara;${BETR_LIBRARIES})
+set(BETR_LIBRARIES ecacnpPara;${BETR_LIBRARIES} PARENT_SCOPE)
+set(BETR_LIBRARIES ecacnpPara;${BETR_LIBRARIES})
 
 #X#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS cdomPara DESTINATION lib)
+  install(TARGETS ecacnpPara DESTINATION lib)
   file(GLOB HEADERS *.h)
-  install(FILES ${HEADERS} DESTINATION include/soil-farm/cdom_ecacnp/cdomPara)
+  install(FILES ${HEADERS} DESTINATION include/soil-farm/ecacnp/ecacnpPara)
 endif()
