--- a/src/Applications/soil-farm/cdom/cdomPara/CMakeLists.txt
+++ b/src/Applications/soil-farm/cdom/cdomPara/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(CENTPARA_SOURCES
- CentParaType.F90
+set(CDOMPARA_SOURCES
+ cdomParaType.F90
 )
 
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
@@ -8,15 +8,15 @@ include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 include(add_betr_library)
-add_betr_library(centPara ${CENTPARA_SOURCES})
+add_betr_library(cdomPara ${CDOMPARA_SOURCES})
 
-set(BETR_LIBRARIES centPara;${BETR_LIBRARIES} PARENT_SCOPE)
-set(BETR_LIBRARIES centPara;${BETR_LIBRARIES})
+set(BETR_LIBRARIES cdomPara;${BETR_LIBRARIES} PARENT_SCOPE)
+set(BETR_LIBRARIES cdomPara;${BETR_LIBRARIES})
 
 #X#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS centPara DESTINATION lib)
+  install(TARGETS cdomPara DESTINATION lib)
   file(GLOB HEADERS *.h)
-  install(FILES ${HEADERS} DESTINATION include/soil-farm/CENT_ECACNP/centPara)
+  install(FILES ${HEADERS} DESTINATION include/soil-farm/cdom/cdomPara)
 endif()
