--- a/src/Applications/soil-farm/simic/simicNlayer/CMakeLists.txt
+++ b/src/Applications/soil-farm/simic/simicNlayer/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(SIMNLAYER_SOURCES
-  SimicBGCReactionsType.F90
-  SimicPlantSoilBgcType.F90
+set(SIMICNLAYER_SOURCES
+  simicBGCReactionsType.F90
+  simicPlantSoilBgcType.F90
 )
 
   include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
@@ -10,18 +10,18 @@ set(SIMNLAYER_SOURCES
   include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_dtype)
   include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
   include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
-  include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simpara)
-  include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/sim1layer)
+  include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simicPara)
+  include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simic1layer)
   include(add_betr_library)
-  add_betr_library(simNlayer ${SIMNLAYER_SOURCES})
+  add_betr_library(simicNlayer ${SIMICNLAYER_SOURCES})
 
-  set(BETR_LIBRARIES simNlayer;${BETR_LIBRARIES} PARENT_SCOPE)
-  set(BETR_LIBRARIES simNlayer;${BETR_LIBRARIES})
+  set(BETR_LIBRARIES simicNlayer;${BETR_LIBRARIES} PARENT_SCOPE)
+  set(BETR_LIBRARIES simicNlayer;${BETR_LIBRARIES})
 
 #X#add_subdirectory(tests)
 
   if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-    install(TARGETS simNlayer DESTINATION lib)
+    install(TARGETS simicNlayer DESTINATION lib)
     file(GLOB HEADERS *.h)
-    install(FILES ${HEADERS} DESTINATION include/soil-farm/simic/simNlayer)
+    install(FILES ${HEADERS} DESTINATION include/soil-farm/simic/simicNlayer)
   endif()
