source filename standardization for soil-farm
This further prepares the use of code generator
to generator basic source code for designing
new soil-farm applicaitons. All standard tests
passed without any issue.

--- a/src/Applications/soil-farm/cdom/cdom1layer/CMakeLists.txt
+++ b/src/Applications/soil-farm/cdom/cdom1layer/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(CDOM1LAYER_SOURCES
-  BgccdomCnpIndexType.F90
-  BgccdomCnpCompetType.F90
-  BgccdomCnpDecompType.F90
-  BgccdomCnpNitDenType.F90
-  BgccdomCnpSOMType.F90
-  BgccdomCnpType.F90
+  cdomBGCIndexType.F90
+  cdomBGCCompetType.F90
+  cdomBGCDecompType.F90
+  cdomBGCNitDenType.F90
+  cdomBGCSOMType.F90
+  cdomBGCType.F90
 )
 
 
