bug fix for simic bgc
Fixed a namelist bug for simic bgc.
All standard tests passed with intel compiler.

--- a/src/Applications/soil-farm/simic/simicNlayer/CMakeLists.txt
+++ b/src/Applications/soil-farm/simic/simicNlayer/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SIMICNLAYER_SOURCES
   simicBGCReactionsType.F90
-  simicPlantSoilBgcType.F90
+  simicPlantSoilBGCType.F90
 )
 
   include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
