implemented temperature and moisture control in simic
Now the temperature and moisture functions from ecosys
are used to drive simic bgc.

--- a/src/Applications/soil-farm/bgcfarm_util/CMakeLists.txt
+++ b/src/Applications/soil-farm/bgcfarm_util/CMakeLists.txt
@@ -4,6 +4,7 @@ set(BGCFARM_UTIL_SOURCES
  BeTRJarModel.F90
  SOMStateVarUpdateMod.F90
  gBGCIndexType.F90
+ EcosysMicDynParamMod.F90
 )
 
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
