bug fix for cdom
Now cdom runs with the jarmodel mode, although
the nitrogen cycle seems a little bit problematic.

--- a/src/Applications/soil-farm/cdom/cdom1layer/CMakeLists.txt
+++ b/src/Applications/soil-farm/cdom/cdom1layer/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CDOM1LAYER_SOURCES
 
   include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
   include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
+  include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_para)
   include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
   include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom/cdomPara)
   include(add_betr_library)
