--- a/src/jarmodel/driver/CMakeLists.txt
+++ b/src/jarmodel/driver/CMakeLists.txt
@@ -10,6 +10,8 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/ecacnp/ecacnpPara)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/ecacnp/ecacnp1layer)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom/cdomPara)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom/cdom1layer)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simicPara)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simic1layer)
 include_directories(${CMAKE_BINARY_DIR}/src/jarmodel/forcing)
