updated the code generate
Now the code generate works reasonablly. The
generated code compiles successfully. However, one should
not expect it to work scientifically before some customization
is properly done. Also fixed a typo in the CMakeFile for
ecacnp. All standard tests passed with gnu 8.x compilers on OSX.

--- a/src/Applications/soil-farm/ecacnp/ecacnpPara/CMakeLists.txt
+++ b/src/Applications/soil-farm/ecacnp/ecacnpPara/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CENTPARA_SOURCES
+set(ECACNPPARA_SOURCES
  ecacnpParaType.F90
 )
 
@@ -8,7 +8,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 include(add_betr_library)
-add_betr_library(ecacnpPara ${CENTPARA_SOURCES})
+add_betr_library(ecacnpPara ${ECACNPPARA_SOURCES})
 
 set(BETR_LIBRARIES ecacnpPara;${BETR_LIBRARIES} PARENT_SCOPE)
 set(BETR_LIBRARIES ecacnpPara;${BETR_LIBRARIES})
