--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -21,7 +21,7 @@ set(BETR_UTIL_SOURCES
   betr_utils.F90
   Tracer_varcon.F90
   listMod.F90
-  UnitConverMod.F90
+  UnitConvertMod.F90
   )
 
 configure_file(bshr_assert.h bshr_assert.h COPYONLY)
