add the robertson model for integration test
The stiff robertson model is added to test
the flux limiter numerical integrator, which
is implemented in both sparse matrix and full
matrix based formats.

All standard tests passed with gnu 8.x compilers.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(io_util)
 add_subdirectory(stub_clm)
 add_subdirectory(Applications)
 add_subdirectory(driver)
+add_subdirectory(math_test)
 add_subdirectory(jarmodel)
