--- a/src/Applications/soil-farm/CMakeLists.txt
+++ b/src/Applications/soil-farm/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_subdirectory(bgcfarm_util)
+#begin_appadd_directories
 add_subdirectory(ecacnp)
 add_subdirectory(cdom)
 add_subdirectory(simic)
+add_subdirectory(keca)
+#end_appadd_directories
 set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
