remove the predictive k-aff in ecacnp
Now ecacnp uses the par file provided
affinity parameter for nutrient uptake.
The predictive k-aff parameterization is
pushed to the keca case.

All standard tests passed with gnu 8.x compilers.

--- a/src/jarmodel/driver/CMakeLists.txt
+++ b/src/jarmodel/driver/CMakeLists.txt
@@ -14,6 +14,8 @@ include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom/cdomPara
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom/cdom1layer)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simicPara)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simic1layer)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/kecaPara)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/keca1layer)
 include_directories(${CMAKE_BINARY_DIR}/src/jarmodel/forcing)
 
 include(add_betr_library)
