--- a/src/jarmodel/forcing/CMakeLists.txt
+++ b/src/jarmodel/forcing/CMakeLists.txt
@@ -14,6 +14,8 @@ include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/ecacnp/ecacnpPara)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/kecaPara)
+
 include(add_betr_library)
 add_betr_library(betr_jar_forc ${BETR_JARFORC_SOURCES})
 
