--- a/src/jarmodel/test/CMakeLists.txt
+++ b/src/jarmodel/test/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util/)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/ecacnp/ecacnpPara/)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom/cdomPara/)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/kecaPara/)
 
 
 include(add_betr_library)
