--- a/src/betr/betr_para/CMakeLists.txt
+++ b/src/betr/betr_para/CMakeLists.txt
@@ -11,6 +11,8 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_dtype)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_transport)
+
 
 include(add_betr_library)
 add_betr_library(betr_para ${BETR_PARA_SOURCES})
