--- a/src/driver/clm/CMakeLists.txt
+++ b/src/driver/clm/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_dtype)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_bgc)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_transport)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_para)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_main)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
