--- a/src/Applications/soil-farm/CMakeLists.txt
+++ b/src/Applications/soil-farm/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(ecacnp)
 add_subdirectory(cdom)
 add_subdirectory(simic)
 add_subdirectory(keca)
+add_subdirectory(ch4soil)
 #end_appadd_directories
 set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
