enhanced the python code generator
Now  CloneApp.py modifies relevant make files
and source code to minimize extra effort to
turn on the new added models.

--- a/src/Applications/soil-farm/CMakeLists.txt
+++ b/src/Applications/soil-farm/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_subdirectory(bgcfarm_util)
-#begin_appadd_directories
+#begin_appadd
 add_subdirectory(ecacnp)
 add_subdirectory(cdom)
 add_subdirectory(simic)
 add_subdirectory(keca)
 add_subdirectory(ch4soil)
-#end_appadd_directories
+#end_appadd
 set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
