simplified memory allocation using macros
Introduced bshr_alloc.h to use macros to
simplify the array allocation process.

--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -25,6 +25,7 @@ set(BETR_UTIL_SOURCES
   )
 
 configure_file(bshr_assert.h bshr_assert.h COPYONLY)
+configure_file(bshr_alloc.h bshr_alloc.h COPYONLY)
 configure_file(bmpif.h bmpif.h COPYONLY)
 configure_file(dtypes.h dtypes.h COPYONLY)
 
