--- a/src/betr/CMakeLists.txt
+++ b/src/betr/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(betr_util)
 add_subdirectory(betr_math)
 add_subdirectory(betr_grid)
 add_subdirectory(betr_dtype)
+add_subdirectory(betr_echem)
 add_subdirectory(betr_bgc)
 add_subdirectory(betr_core)
 add_subdirectory(betr_transport)
