--- a/src/jarmodel/forcing/CMakeLists.txt
+++ b/src/jarmodel/forcing/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 #begin_appadd
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/ecacnp/ecacnpPara)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/kecaPara)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/v1eca/v1ecaPara)
 #end_appadd
 include(add_betr_library)
 add_betr_library(betr_jar_forc ${BETR_JARFORC_SOURCES})
