remove 3rd party netcdf dependence
Now it assumes the user has compatible
netcdf preinstalled. Also updated the
python script to ensure standard tests passed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,7 +147,32 @@ if (${NEED_LAPACK})
 endif()
 
 set(BETR_NEED_PETSC 0)
+if (XSDK_WITH_NETCDF)
+  if (NOT TPL_NETCDF_LIBRARIES)
+    message(FATAL_ERROR "TPL_NETCDF_LIBRARIES option be set for netcdf support to be enabled.")
+  endif()
+#X#  foreach(lib ${TPL_NETCDF_LIBRARIES})
+#X#    if (NOT EXISTS ${lib})
+#X#      message(FATAL_ERROR "netcdf library not found: ${lib}")
+#X#    endif()
+#X#  endforeach()
 
+  if (NOT TPL_NETCDF_INCLUDE_DIRS)
+    message(FATAL_ERROR "TPL_NETCDF_INCLUDE_DIRS option be set for netcdf support to be enabled.")
+  endif()
+#X#  foreach(dir ${TPL_NETCDF_INCLUDE_DIRS})
+#X#    if (NOT EXISTS ${dir})
+#X#      message(FATAL_ERROR "netcdf include directory not found: ${dir}")
+#X#    endif()
+#X#  endforeach()
+
+  message("-- Enabled support for netcdf.")
+  list(APPEND BETR_TPLS ${TPL_NETCDF_LIBRARIES})
+  list(APPEND BETR_INCLUDE_DIRS ${TPL_NETCDF_INCLUDE_DIRS})
+  set(BETR_HAVE_NETCDF 1)
+else()
+  set(BETR_HAVE_NETCDF 0)
+endif()
 # Other third-party libraries.
 add_subdirectory(3rd-party)
 
