modified:   src/Applications/app_util/ApplicationsFactory.F90 	modified:   src/Applications/app_util/CMakeLists.txt 	modified:   src/Applications/soil-farm/CMakeLists.txt 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/BgcSummsIndexType.F90 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/BgcSummsType.F90 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/CMakeLists.txt 	modified:   src/Applications/soil-farm/SUMMS/summsNlayer/BgcReactionsSummsType.F90 	modified:   src/Applications/soil-farm/SUMMS/summsPara/SummsParaType.F90 	modified:   src/betr/betr_util/betr_ctrl.F90 	modified:   src/betr/betr_util/betr_time_mod.F90 	modified:   src/driver/alm/BeTRSimulationALM.F90 	modified:   src/driver/main/HistBGCMod.F90 	modified:   src/driver/main/sbetrDriverMod.F90 	modified:   src/driver/shared/BeTRSimulation.F90 	modified:   src/driver/standalone/BeTRSimulationStandalone.F90 	modified:   src/jarmodel/driver/CMakeLists.txt 	modified:   src/jarmodel/driver/JarModelFactory.F90 	modified:   src/jarmodel/forcing/CMakeLists.txt 	modified:   src/jarmodel/forcing/SetJarForcMod.F90 	modified:   src/jarmodel/test/CMakeLists.txt 	modified:   src/jarmodel/test/readparatest.F90

--- a/src/Applications/app_util/CMakeLists.txt
+++ b/src/Applications/app_util/CMakeLists.txt
@@ -25,6 +25,10 @@ include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/simic/simicNl
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/kecaPara)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/keca1layer)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/kecaNlayer)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/SUMMS/summsPara)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/SUMMS/summs1layer)
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/SUMMS/summsNlayer)
+
 #end_appadd
 include(add_betr_library)
 add_betr_library(app_util ${BETR_APP_UTIL_SOURCES})
