--- a/src/Applications/soil-farm/SUMMS/summs1layer/CMakeLists.txt
+++ b/src/Applications/soil-farm/SUMMS/summs1layer/CMakeLists.txt
@@ -5,6 +5,9 @@ set(SUMMS1LAYER_SOURCES
   BgcSummsNitDenType.F90
   BgcSummsSOMType.F90
   BgcSummsType.F90
+  BgcSummsMath.F90
+  BgcSummsDebType.F90
+  DebGrowMod.F90
 )
 
 
