--- a/src/jarmodel/test/CMakeLists.txt
+++ b/src/jarmodel/test/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util/
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/ecacnp/ecacnpPara/)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/cdom/cdomPara/)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/keca/kecaPara/)
-
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/SUMMS/summsPara/)
 
 include(add_betr_library)
 add_betr_library(jarmodel_test ${JARMODEL_TEST_SOURCES})
