--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -64,7 +64,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/3rd-party/pfunit
 set(ENV{PFUNIT} ${PROJECT_BINARY_DIR} CACHE)
 
 #remove netcdf dependence 
+if (MACHINE MATCHES "notsupported")
 return ()
+endif()
 
 # Build zlib for compression.
 if (NOT EXISTS ${Z_LIBRARY})
