modified:   3rd-party/CMakeLists.txt 	modified:   cmake/Modules/set_up_platform.cmake 	modified:   regression-tests/rtest_betr.py 	modified:   src/Applications/app_util/ApplicationsFactory.F90 	modified:   src/Applications/app_util/CMakeLists.txt 	modified:   src/Applications/soil-farm/CMakeLists.txt 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/BgcSummsDecompType.F90 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/BgcSummsIndexType.F90 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/BgcSummsSOMType.F90 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/BgcSummsType.F90 	modified:   src/Applications/soil-farm/SUMMS/summs1layer/CMakeLists.txt 	modified:   src/Applications/soil-farm/SUMMS/summsNlayer/BgcReactionsSummsType.F90 	modified:   src/Applications/soil-farm/SUMMS/summsPara/SummsParaType.F90 	modified:   src/Applications/soil-farm/bgcfarm_util/JarBgcForcType.F90 	modified:   src/Applications/soil-farm/cdom/cdomNlayer/cdomBGCReactionsType.F90 	modified:   src/Applications/soil-farm/ch4lake/ch4lakeNlayer/ch4lakeBGCReactionsType.F90 	modified:   src/Applications/soil-farm/ch4lake/ch4lakePara/ch4lakeParaType.F90 	modified:   src/Applications/soil-farm/ch4soil/ch4soilNlayer/ch4soilBGCReactionsType.F90 	modified:   src/Applications/soil-farm/ecacnp/ecacnp1layer/ecacnpBGCType.F90 	modified:   src/Applications/soil-farm/ecacnp/ecacnpNlayer/ecacnpBGCReactionsType.F90 	modified:   src/Applications/soil-farm/keca/kecaNlayer/kecaBGCReactionsType.F90 	modified:   src/Applications/soil-farm/simic/simicNlayer/simicBGCReactionsType.F90 	modified:   src/Applications/soil-farm/v1eca/v1ecaNlayer/v1ecaBGCReactionsType.F90 	modified:   src/betr/betr_core/BGCReactionsMod.F90 	modified:   src/betr/betr_core/TracerCoeffType.F90 	modified:   src/betr/betr_core/TracerFluxType.F90 	modified:   src/betr/betr_dtype/BeTR_carbonstateRecvType.F90 	modified:   src/betr/betr_dtype/BeTR_nitrogenstateRecvType.F90 	modified:   src/betr/betr_dtype/BeTR_phospho

--- a/src/Applications/soil-farm/CMakeLists.txt
+++ b/src/Applications/soil-farm/CMakeLists.txt
@@ -1,45 +1,25 @@
 add_subdirectory(bgcfarm_util)
-<<<<<<< HEAD
 #begin_appadd
 add_subdirectory(ecacnp)
 add_subdirectory(cdom)
 add_subdirectory(simic)
 add_subdirectory(keca)
 add_subdirectory(ch4soil)
-<<<<<<< HEAD
 add_subdirectory(SUMMS)
-=======
-add_subdirectory(v1eca)
->>>>>>> jinyun_rr
+add_subdirectory(v1eca)  #>>>>>>> jinyun_rr
 #end_appadd
-||||||| merged common ancestors
-add_subdirectory(CENT_ECACNP)
-add_subdirectory(cdom_ecacnp)
-if (UGM)
-  add_subdirectory(UGM-M)
-endif()
+#add_subdirectory(CENT_ECACNP)
+#add_subdirectory(cdom_ecacnp)
+#if (UGM)
+ # add_subdirectory(UGM-M)
+#endif()
 #add_subdirectory(CENT_ECADCNP)
 # FIXME(bja, 201603) is this manual list necessary with the subdir
 # adding to parent scope?
 
 #set(BETR_LIBRARIES bgcfarm_util;cent_ecadcnp;${BETR_LIBRARIES} PARENT_SCOPE)
-if (UGM)
-set(BETR_LIBRARIES bgcfarm_util;UGM-M;${BETR_LIBRARIES} PARENT_SCOPE)
-else()
-=======
-add_subdirectory(CENT_ECACNP)
-add_subdirectory(cdom_ecacnp)
-add_subdirectory(SUMMS)
-if (UGM)
-  add_subdirectory(UGM-M)
-endif()
-#add_subdirectory(CENT_ECADCNP)
-# FIXME(bja, 201603) is this manual list necessary with the subdir
-# adding to parent scope?
-
-#set(BETR_LIBRARIES bgcfarm_util;cent_ecadcnp;${BETR_LIBRARIES} PARENT_SCOPE)
-if (UGM)
-set(BETR_LIBRARIES bgcfarm_util;UGM-M;${BETR_LIBRARIES} PARENT_SCOPE)
-else()
->>>>>>> rzacplsbetr_cmupdated
+#if (UGM)
+#set(BETR_LIBRARIES bgcfarm_util;UGM-M;${BETR_LIBRARIES} PARENT_SCOPE)
+#else()
+# >>>>>> rzacplsbetr_cmupdated
 set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
