modified:   src/betr/betr_dtype/BeTR_biogeoStateType.F90 	modified:   src/betr/betr_dtype/BeTR_carbonstateRecvType.F90 	modified:   src/betr/betr_dtype/BeTR_nitrogenstateRecvType.F90 	modified:   src/driver/alm/BeTRSimulationALM.F90 	modified:   src/driver/main/sbetrDriverMod.F90 	modified:   src/driver/shared/BeTRSimulation.F90 	modified:   src/driver/standalone/BeTRSimulationStandalone.F90 	modified:   src/stub_clm/CMakeLists.txt 	modified:   src/stub_clm/CNCarbonFluxType.F90 	modified:   src/stub_clm/CNCarbonStateType.F90 	modified:   src/stub_clm/CNNitrogenFluxType.F90 	modified:   src/stub_clm/CNNitrogenStateType.F90 	modified:   src/stub_clm/PhosphorusFluxType.F90 	modified:   src/stub_clm/PhosphorusStateType.F90

--- a/src/stub_clm/CMakeLists.txt
+++ b/src/stub_clm/CMakeLists.txt
@@ -52,6 +52,7 @@ set(BETR_STUB_CLM_SOURCES
   subgridAveMod.F90
   )
 
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include_directories(${CMAKE_BINARY_DIR}/src/esmf_wrf_timemgr)
 include_directories(${CMAKE_BINARY_DIR}/src/io_util)
