update to new data structure
Now sbetr is compatible with the elm v2 data structure.
All standard tests passed with gcc8 on osx.

--- a/src/stub_clm/CMakeLists.txt
+++ b/src/stub_clm/CMakeLists.txt
@@ -1,9 +1,12 @@
 set(BETR_STUB_CLM_SOURCES
   CNCarbonFluxType.F90
+  PfCarbonFluxType.F90
   CNCarbonStateType.F90
   CNDecompCascadeConType.F90
   CNNitrogenFluxType.F90
+  PfNitrogenFluxType.F90
   CNNitrogenStateType.F90
+  PfNitrogenStateType.F90
   CNSharedParamsMod.F90
   CNStateType.F90
   CanopyStateType.F90
@@ -16,6 +19,7 @@ set(BETR_STUB_CLM_SOURCES
   PatchType.F90
   lnd2atmType.F90
   PhosphorusFluxType.F90
+  PfPhosphorusFluxType.F90
   PhosphorusStateType.F90
   QSatMod.F90
   SoilHydrologyType.F90
@@ -25,8 +29,10 @@ set(BETR_STUB_CLM_SOURCES
   SoilWaterRetentionCurveMod.F90
   SurfaceResistanceMod.F90
   TemperatureType.F90
+  PfTemperatureType.F90
   TridiagonalMod.F90
   WaterFluxType.F90
+  PfWaterFluxType.F90
   WaterStateType.F90
   accumulMod.F90
   atm2lndType.F90
