add analytical solution benchmark part 1
This starts to add benchmark of the transport
solver using analytical solutions.

All standard tests passed with gnu 9.x compilers.

--- a/src/betr/betr_rxns/CMakeLists.txt
+++ b/src/betr/betr_rxns/CMakeLists.txt
@@ -2,6 +2,10 @@ set(BETR_RXNS_SOURCES
   ReactionsFactory.F90
   MockBGCReactionsType.F90
   MockPlantSoilBGCType.F90
+  Tracer1beckBGCReactionsType.F90
+  Tracer1beckPlantSoilBGCType.F90
+  Tracer2beckBGCReactionsType.F90
+  Tracer2beckPlantSoilBGCType.F90
   DIOCPlantSoilBGCType.F90
   DIOCBGCReactionsType.F90
   H2OIsotopeBGCReactionsType.F90
