--- a/3rd-party/3rd-party.cfg
+++ b/3rd-party/3rd-party.cfg
@@ -24,7 +24,7 @@ dependancy_for = netcdf-c
 
 [netcdf-c]
 version = v4.4.0
-url = https://github.com/Unidata/netcdf-c
+url = https://github.com/jinyun1tang/netcdf-c
 inclusion_method = git subtree
 local_modifications = no
 license = netcdf
