--- a/3rd-party/hdf5/CMakeLists.txt
+++ b/3rd-party/hdf5/CMakeLists.txt
@@ -741,13 +741,13 @@ if (NOT HDF5_EXTERNALLY_CONFIGURED)
     set (HDF5_NO_PACKAGES OFF CACHE BOOL "CPACK - Disable packaging" FORCE)
     if (HDF5_ENABLE_Z_LIB_SUPPORT AND ZLIB_FOUND)
       PACKAGE_ZLIB_LIBRARY (${HDF5_ALLOW_EXTERNAL_SUPPORT})
-    endif (HDF5_ENABLE_Z_LIB_SUPPORT AND ZLIB_FOUND)
+    endif ()
 
     if (HDF5_ENABLE_SZIP_SUPPORT AND SZIP_FOUND)
       PACKAGE_SZIP_LIBRARY (${HDF5_ALLOW_EXTERNAL_SUPPORT})
-    endif (HDF5_ENABLE_SZIP_SUPPORT AND SZIP_FOUND)
-  endif (HDF5_PACKAGE_EXTLIBS)
-endif (NOT HDF5_EXTERNALLY_CONFIGURED)
+    endif ()
+  endif ()
+endif ()
 
 #-----------------------------------------------------------------------------
 # Option to use threadsafe
@@ -817,16 +817,14 @@ add_subdirectory (src)
 
 if (HDF5_ALLOW_EXTERNAL_SUPPORT MATCHES "GIT" OR HDF5_ALLOW_EXTERNAL_SUPPORT MATCHES "TGZ")
   if (ZLIB_FOUND AND ZLIB_USE_EXTERNAL)
-    ADD_DEPENDENCIES (${HDF5_LIB_TARGET} ZLIB)
     if (NOT ONLY_SHARED_LIBS)
       add_dependencies (${HDF5_LIB_TARGET} ZLIB)
     endif ()
     if (BUILD_SHARED_LIBS)
       add_dependencies (${HDF5_LIBSH_TARGET} ZLIB)
-    endif (BUILD_SHARED_LIBS)
-  endif (ZLIB_FOUND AND ZLIB_USE_EXTERNAL)
+    endif ()
+  endif ()
   if (SZIP_FOUND AND SZIP_USE_EXTERNAL)
-    ADD_DEPENDENCIES (${HDF5_LIB_TARGET} SZIP)
     if (NOT ONLY_SHARED_LIBS)
       add_dependencies (${HDF5_LIB_TARGET} SZIP)
     endif ()
