update netcdf support
Now netcdf support can be either from the system
or from the 3rd-party.
Tested with OSX using gnu 9 compilers.

--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -64,7 +64,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/3rd-party/pfunit
 set(ENV{PFUNIT} ${PROJECT_BINARY_DIR} CACHE)
 
 #remove netcdf dependence
-if (MACHINE MATCHES "notsupported"  AND BETR_HAVE_NETCDF EQUAL 1)
+if (BETR_HAVE_NETCDF EQUAL 1)
 return ()
 endif()
 
